Fix tiles overflowing if width > columns

--- a/static/css/content.css
+++ b/static/css/content.css
@@ -12,6 +12,7 @@
     margin: 0px auto;
     box-shadow: 5px 5px 15px -3px rgba(0,0,0,0.75);
     margin-bottom: 20px;
+    overflow: auto;
 }
 
 .page-safe-line div {
